# vaaka

./: Common.hs  FFI.hs  Main.hs  Print.hs  SQLite.hs  UI.hs  config.json  storeAnalyses.sh  vaaka.cabal  vaaka.db  vaaka.glade  vaakaRehu.glade  vaakaVilja.glade
cbits/: Input.c  Input.h
